--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -978,107 +978,107 @@ stories:
   domain: http://www.dailyvanguard.com/
   link: https://www.dailyvanguard.com/understanding-social-security-administration/
 images:
-- name: old-house-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
-- name: copper-circuit-DSC_0088.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0088.jpg
-- name: hollywood-building-hollywood-building-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
-- name: scream-concert-hall.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-concert-hall.jpg
-- name: crow_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
-- name: beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-alien-goggles.jpg
-- name: bf-skinner-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-boats-waterfront-bristol.jpg
-- name: aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1-square.jpg
-- name: powerlines-power-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purple-storm.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-horiz-circuit.jpg
-- name: mistywoods-babyfoot-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
-- name: window-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-diego-rivera1.jpg
-- name: nazi-invasion-white-house-press-room-flag.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-press-room-flag.jpg
-- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
-- name: statue-of-liberty-front-view-statueofliberty-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dark-rain.jpg
-- name: miamibeach-miamibeach-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-blocks.jpg
-- name: stalin-time-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-fence-down-the-line-2.jpg
-- name: mosaic-face-mosaic-face-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sunday.jpg
-- name: downtown-trucksilo-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-mucha-mult.jpg
-- name: downtown-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-really-hot.jpg
-- name: containership-containership.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership.jpg
-- name: copper-circuit-close-to-all-remote-aircraft.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-close-to-all-remote-aircraft.jpg
-- name: meadowbutterfly-meadow-butterfly-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-nazi-poster.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
-- name: downtown-los-angeles-downtown-la-monet-one.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-monet-one.JPG
-- name: adam-smith-adam-smith-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-sand-paper.jpg
-- name: yuma-bank-yuma-bak-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-atari-asteroids.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-clean-view.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-atari-asteroids.jpg
-- name: oldbarn-oldbarn-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-green-zuma.jpg
-- name: trucksilo-trucksilo-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-green-zuma.jpg
-- name: subway-subway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
-- name: rain-princess-DSC_0015.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
-- name: oldbarn-oldbarn-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-kandinsky-bv.jpg
-- name: status-berlin-status-berlin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-marcel-duchamp.jpg
-- name: old-school-house-old-schoolhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-kand-two.jpg
-- name: razorwire-DSC-0080-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
-- name: crow-crow-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
-- name: copper-circuit-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cruise-ship-shore-log.jpg
-- name: rockingchair-rockingchair-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
-- name: trucksilo-trucksilo-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-smoking-cigarette.jpg
-- name: dragon-desert-desert-dragon-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-monet-one.jpg
-- name: sand-hand-sand-hand-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-monet-one.jpg
-- name: ellis-island-ellisisland-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-brush.jpg
-- name: old-barn-old-barn-1500-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-plentiful.jpg
-- name: bf-skinner-cargo-ship_36587814601_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cargo-ship_36587814601_o.jpg
-- name: 35562068104_fa20c57575-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-copper-circuit.jpg
-- name: downtheline-downtheline-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-blue-electricity.jpg
-- name: downtheline-downtheline-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-far-away.jpg
+- name: ellis-island-ellis-island-room-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-plentiful.jpg
+- name: la-muse-desktop-laptop-chair.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-desktop-laptop-chair.jpg
+- name: blossombar-gred-mash-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gred-mash-file-00-00-24-99.jpg
+- name: curtain-curtain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-plentiful.jpg
+- name: castle-wall-DSC-0067-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-nazi-poster.JPG
+- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
+- name: beach-clouds-lifeguard-beachclouds-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-green-zuma.jpg
+- name: crow-crow-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-graham-sutherland.jpg
+- name: store-on-corner-oldcabin-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-ww2-dresden.jpg
+- name: containership-containership-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alien-goggles.jpg
+- name: oldtrain-oldtrain-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
+- name: berlinwall2-berlinwall-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-rainbow-festival.jpg
+- name: bordercrossing-bordercrossing-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-dresden.jpg
+- name: aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-gargoyle-nd-paris-atari-missle.jpg
+- name: stalin-time-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-palace-water-fountain.jpg
+- name: sand-hand-sand-hand-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-aqua.jpg
+- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+- name: aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-castle-on-hill-edinburgh-blue-circuit-square.jpg
+- name: fence-mexico-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-three.jpg
+- name: white-house-lawn-white-house-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
+- name: capital-battle-capitolbattle-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-dream.jpg
+- name: server-racks-door-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-kandinsky-bv.jpg
+- name: mosaic-face-mosaic-face-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-mucha-mult.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+- name: miamibeach-miamibeach-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-really-hot.jpg
+- name: nazi-invasion-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
+- name: catacombs-catacombs-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-wav-pr.jpg
+- name: locked-up-steam-lock-up-steam-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
+- name: legal-statue-legalstatue-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-dali.jpg
+- name: oldsmallboat-oldsmallboat-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-diego-rivera1.jpg
+- name: white-house-lawn-white-house-lawn-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-far-away.jpg
+- name: copper-circuit-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway-in-hotel.jpg
+- name: christianity-christianity-under-construction-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-green-zuma.jpg
+- name: copper-circuit-satellite-dishes-pointing-up.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-satellite-dishes-pointing-up.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-rain.jpg
+- name: nazi-invasion-highway-granary_36331800650_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary_36331800650_o.jpg
+- name: windowmountain-window-mountain-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-dali.jpg
+- name: oldcabin-oldcabin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-graham-sutherland.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+- name: legal-statue-legalstatue-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-sunday.jpg
+- name: border-crossing-bordercrossing-yellow-collage.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-yellow-collage.png
+- name: bf-skinner-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-lighthouse_36556509232_o.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: stories-beach-rocks-currents-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-beach-rocks-currents-feed-people.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-attack-planes.jpg
+- name: art-museum-art-museum-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-brush.jpg
+- name: oldroad-old-road-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smoking-cigarette.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-creativity.jpg
+- name: legal-statue-legalstatue-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
+- name: white-house-lawn-white-house-window-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kandinsky-bv.jpg
 ---
 Market Street Bridge To Open Saturday.&nbsp;Already Convicted Former Murray Attorney Indicted On Two New Theft Counts.&nbsp;ETape Digital Tape Measure.&nbsp;Democratic Candidate Says Trump Is A Fake On The Economy.&nbsp;Schools Cruel With Lunch Money Threat.&nbsp;Maintenance Issues Reported At Vons.&nbsp;Putnam Split On Trump Impeachment.&nbsp;Director Of Audience Development.&nbsp;
